--- a/ProjectGenius-Frontend/public/index.html
+++ b/ProjectGenius-Frontend/public/index.html
@@ -18,6 +18,7 @@
     <link href="%PUBLIC_URL%/css/progressBar.css" rel="stylesheet" />
     <link href="%PUBLIC_URL%/css/attendance-mark.css" rel="stylesheet" />
     <link href="%PUBLIC_URL%/css/home.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/css/404.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
