--- a/ProjectGenius-Frontend/public/index.html
+++ b/ProjectGenius-Frontend/public/index.html
@@ -14,6 +14,7 @@
     <link href="%PUBLIC_URL%/css/fee-setup.css" rel="stylesheet" />
     <link href="%PUBLIC_URL%/css/teacher.css" rel="stylesheet" />
     <link href="%PUBLIC_URL%/css/teacher-details.css" rel="stylesheet" />
+    <link href="%PUBLIC_URL%/css/teacher-dashboard.css" rel="stylesheet" />
     <link href="%PUBLIC_URL%/css/time-table.css" rel="stylesheet" />
     <link href="%PUBLIC_URL%/css/progressBar.css" rel="stylesheet" />
     <link href="%PUBLIC_URL%/css/attendance-mark.css" rel="stylesheet" />
